--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
     </header>
    <!-- Blog -->
     <section class="blog-container">
-        <img src="/assets/img/main-news-img.png" alt="imagen del blog principal">
+        <img src="/assets/img/main-news-img.png" alt="imagen del blog principal" loading="lazy">
         <h3>Noticias</h3>
         <div class="blog-content">
             <h2>Titulo del blog</h2>
@@ -39,14 +39,14 @@
       <!-- Contact -->
       <section class="contact-container">
         <div class="contact-info-container">
-            <img src="/assets/img/013-newsletter.png" alt="email-icon">
+            <img src="/assets/img/013-newsletter.png" alt="email-icon" loading="lazy">
             <div class="contact-info-text">
                 <h3>Contacto</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, hic.</p>
             </div>
         </div>
         <div class="contact-info-container">
-            <img src="/assets/img/006-like.png" alt="donate-icon">
+            <img src="/assets/img/006-like.png" alt="donate-icon" loading="lazy">
             <div class="contact-info-text">
                 <h3>Donate</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, hic.</p>
