--- a/blogs.html
+++ b/blogs.html
@@ -30,7 +30,7 @@
     <main class="principal-blog">
         <div class="principal-blog_left">
             <h3>Noticias</h3>
-            <img src="/assets/img/main-news-img.png" alt="imagen blog principal">
+            <img src="/assets/img/main-news-img.png" alt="imagen blog principal" loading="lazy">
         </div>
         <div class="principal-blog_rigth">
             <h2>Titulo del Blog</h2>
@@ -47,7 +47,7 @@
         <h2>Ultimos blogs</h2>
         <div class="blogs-container">
             <article class="blog-cards">
-                <img src="/assets/img/post-2.png" alt="imagen del blog">
+                <img src="/assets/img/post-2.png" alt="imagen del blog" loading="lazy">
                 <h3>Titulo del blog</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, consectetur.</p>
                 <a href="/blog.html">
@@ -57,7 +57,7 @@
                 </a>
             </article>
             <article class="blog-cards">
-                <img src="/assets/img/post-1.png" alt="imagen del blog">
+                <img src="/assets/img/post-1.png" alt="imagen del blog" loading="lazy">
                 <h3>Titulo del blog</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, consectetur.</p>
                 <a href="/blog.html">
@@ -67,7 +67,7 @@
                 </a>
             </article>
             <article class="blog-cards">
-                <img src="/assets/img/post-2.png" alt="imagen del blog">
+                <img src="/assets/img/post-2.png" alt="imagen del blog" loading="lazy">
                 <h3>Titulo del blog</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, consectetur.</p>
                 <a href="/blog.html">
@@ -77,7 +77,7 @@
                 </a>
             </article>
             <article class="blog-cards">
-                <img src="/assets/img/post-2.png" alt="imagen del blog">
+                <img src="/assets/img/post-2.png" alt="imagen del blog" loading="lazy">
                 <h3>Titulo del blog</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, consectetur.</p>
                 <a href="/blog.html">
@@ -87,7 +87,7 @@
                 </a>
             </article>
             <article class="blog-cards">
-                <img src="/assets/img/main-news-img.png" alt="imagen del blog">
+                <img src="/assets/img/main-news-img.png" alt="imagen del blog" loading="lazy">
                 <h3>Titulo del blog</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, consectetur.</p>
                 <a href="/blog.html">
@@ -97,7 +97,7 @@
                 </a>
             </article>
             <article class="blog-cards">
-                <img src="/assets/img/post-1.png" alt="imagen del blog">
+                <img src="/assets/img/post-1.png" alt="imagen del blog" loading="lazy">
                 <h3>Titulo del blog</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, consectetur.</p>
                 <a href="/blog.html">
