--- a/perfil.html
+++ b/perfil.html
@@ -19,7 +19,7 @@
             </div>
         <nav class="header-title">
             <section class="logo">
-                <a href=""></a>
+                <a href="/index.html"></a>
             </section>
             <section class="about">
                 <a href="/index.html">Home</a>
@@ -30,7 +30,7 @@
     <main class="principal-blog">
         <div class="principal-blog_left">
       
-            <img src="https://i.pinimg.com/564x/af/9f/1f/af9f1fed99621ae20f9edd2ab6cbb8bd.jpg" alt="imagen blog principal">
+            <img src="https://i.pinimg.com/564x/af/9f/1f/af9f1fed99621ae20f9edd2ab6cbb8bd.jpg" loading="lazy" alt="imagen blog principal">
         </div>
         <div class="principal-blog_rigth">
             <h2>Hola!</h2>
@@ -43,7 +43,7 @@
         <h2>Proyectos</h2>
         <div class="blogs-container">
             <article class="blog-cards">
-                <img src="/assets/img/post-2.png" alt="imagen del blog">
+                <img src="/assets/img/post-2.png" alt="imagen del blog" loading="lazy">
                 <h3>Titulo Proyecto</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, consectetur.</p>
                 <a href="/blog.html">
@@ -53,7 +53,7 @@
                 </a>
             </article>
             <article class="blog-cards">
-                <img src="/assets/img/post-2.png" alt="imagen del blog">
+                <img src="/assets/img/post-2.png" alt="imagen del blog" loading="lazy">
                 <h3>Titulo Proyecto</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, consectetur.</p>
                 <a href="/blog.html">
@@ -63,7 +63,7 @@
                 </a>
             </article>
             <article class="blog-cards">
-                <img src="/assets/img/post-2.png" alt="imagen del blog">
+                <img src="/assets/img/post-2.png" alt="imagen del blog" loading="lazy">
                 <h3>Titulo Proyecto</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, consectetur.</p>
                 <a href="/blog.html">
@@ -73,7 +73,7 @@
                 </a>
             </article>
             <article class="blog-cards">
-                <img src="/assets/img/post-2.png" alt="imagen del blog">
+                <img src="/assets/img/post-2.png" alt="imagen del blog" loading="lazy">
                 <h3>Titulo Proyecto</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, consectetur.</p>
                 <a href="/blog.html">
@@ -83,7 +83,7 @@
                 </a>
             </article>
             <article class="blog-cards">
-                <img src="/assets/img/post-2.png" alt="imagen del blog">
+                <img src="/assets/img/post-2.png" alt="imagen del blog" loading="lazy">
                 <h3>Titulo Proyecto</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, consectetur.</p>
                 <a href="/blog.html">
@@ -93,7 +93,7 @@
                 </a>
             </article>
             <article class="blog-cards">
-                <img src="/assets/img/post-2.png" alt="imagen del blog">
+                <img src="/assets/img/post-2.png" alt="imagen del blog" loading="lazy">
                 <h3>Titulo Proyecto</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, consectetur.</p>
                 <a href="/blog.html">
@@ -109,14 +109,14 @@
        <!-- Contact -->
        <section class="contact-container">
         <div class="contact-info-container">
-            <img src="/assets/img/013-newsletter.png" alt="email-icon">
+            <img src="/assets/img/013-newsletter.png" alt="email-icon" loading="lazy">
             <div class="contact-info-text">
                 <h3>Contacto</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, hic.</p>
             </div>
         </div>
         <div class="contact-info-container">
-            <img src="/assets/img/006-like.png" alt="donate-icon">
+            <img src="/assets/img/006-like.png" alt="donate-icon" loading="lazy">
             <div class="contact-info-text">
                 <h3>Donate</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, hic.</p>
